--- a/style.css
+++ b/style.css
@@ -47,8 +47,7 @@ body,html{
 	height:350px;
 }
 #para-container{
-	background-color: #126345;
-	background-color: #1e1e1e;
+	background-color:black;
 	margin: 0;
 	padding:10px;
 	height:contain;
